--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: 923d5eaa2a1751267c9f91e80b85414de59d4ccd2e3939435eabeb2da0304fdb
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
 
@@ -23,7 +23,7 @@ requirements:
     - numba
     - numpy
     - pandas
-    - pyqt >5.10
+    - pyqt >=5.9
     - pyqtgraph
     - pyserial
     - python >=3.6
