--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,8 +21,10 @@ requirements:
     - cross-python_{{ target_platform }}    # [build_platform != target_platform]
     - python                                # [build_platform != target_platform]
   host:
+    - python
     - pip
   run:
+    - python
     - numba
     - numpy
     - pandas
